# originmark

./: .gitignore  LICENSE  README.md  SECURITY.md
api/: .env.example  c2pa_export.py  cloud_storage.py  db.py  hsm_integration.py  ipfs_storage.py  main.py  reputation_system.py  requirements.txt  telemetry.py  webhooks.py
blockchain/: .env.example  hardhat.config.js  package-lock.json  package.json
blockchain/contracts/: OriginMarkRegistry.sol
blockchain/scripts/: deploy.js
docs/: c2pa-integration.md
extension/: background.js  content.js  manifest.json  popup.js
extension/firefox/: background.js  manifest.json  popup.html
extension/safari/: Info.plist  content.js  popup.js
flow_diagrams/: 01-api-architecture.md  02-browser-extension.md  03-github-integration.md  04-sdk-architecture.md  05-web-dashboard.md  06-system-overview.md  README.md  index.md
scripts/: github-integration.py  security-update.sh
sdk/py-cli/: pyproject.toml  setup.py  test_integration_v2.py
sdk/py-cli/examples/: openai_autosign_demo.py  openai_autosign_demo_v2.py
sdk/py-cli/originmark/: __init__.py  cli.py  core.py  openai_plugin_v2.py
sdk/ts-sdk/: package-lock.json  package.json  test-sdk.js
sdk/ts-sdk/src/: index.ts
sdk/web3-sdk/: package-lock.json  package.json  tsconfig.json
sdk/web3-sdk/src/: index.ts
web/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/components/: WalletConnector.tsx
